--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "pnpm@6.21.0",
   "dependencies": {
+    "moment": "^2.29.3",
     "next": "12.1.5",
+    "qs": "^6.10.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-markdown": "^8.0.3",
+    "react-moment": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
+    "@types/qs": "^6.9.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
     "eslint": "8.14.0",
