--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "packageManager": "pnpm@6.21.0",
   "dependencies": {
+    "axios": "^0.27.2",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "qs": "^6.10.3",
@@ -23,6 +24,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
     "typescript": "4.6.4"
