--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "packageManager": "pnpm@6.21.0",
   "dependencies": {
     "axios": "^0.27.2",
+    "dayjs": "^1.11.2",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "qs": "^6.10.3",
@@ -20,13 +21,17 @@
     "react-moment": "^1.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.31",
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
   }
 }
