--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "ethers": "^5.6.8",
     "moment": "^2.29.3",
     "next": "12.1.5",
     "qs": "^6.10.3",
