feat: update slider

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
+    "embla-carousel-react": "^6.2.0",
     "ethers": "^5.6.8",
     "moment": "^2.29.3",
     "next": "12.1.5",
@@ -19,7 +20,9 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
-    "react-moment": "^1.1.2"
+    "react-moment": "^1.1.2",
+    "react-player": "^2.10.1",
+    "rehype-highlight": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
