--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "packageManager": "pnpm@6.21.0",
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.0.0",
+    "@codemirror/language-data": "^6.1.0",
     "@emotion/react": "^11.9.3",
+    "@uiw/react-codemirror": "^4.9.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "embla-carousel-react": "^6.2.0",
