--- a/package.json
+++ b/package.json
@@ -10,27 +10,23 @@
   },
   "packageManager": "pnpm@6.21.0",
   "dependencies": {
-    "@codemirror/lang-markdown": "^6.0.0",
-    "@codemirror/language-data": "^6.1.0",
     "@emotion/react": "^11.9.3",
-    "@uiw/react-codemirror": "^4.9.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.2",
     "embla-carousel-react": "^6.2.0",
     "ethers": "^5.6.8",
-    "moment": "^2.29.3",
     "next": "12.1.5",
     "parse-numeric-range": "^1.3.0",
     "qs": "^6.10.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-markdown": "^8.0.3",
-    "react-moment": "^1.1.2",
     "react-player": "^2.10.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.5",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.31",
     "@types/qs": "^6.9.7",
