--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "incremental": true,
     "jsxImportSource": "@emotion/react",
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
