--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "react-markdown": "^8.0.3",
     "react-player": "^2.10.1",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^6.1.1"
+    "rehype-raw": "^6.1.1",
+    "web3": "^1.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@emotion/babel-plugin": "^11.9.2",
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "17.0.31",
     "@types/qs": "^6.9.7",
