--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start",
     "lint": "next lint"
   },
   "packageManager": "pnpm@6.21.0",
@@ -24,7 +24,8 @@
     "react-player": "^2.10.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
-    "web3": "^1.7.4"
+    "web3": "^1.7.4",
+    "web3-utils": "^1.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
