--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-          ref: master
+          ref: main
 
       - name: Install and Build
         uses: actions/setup-node@v1
