--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,14 @@ jobs:
           npm install
           npm run deploy
 
+      - name: Prepare SSH
+        run: >
+          cd ~ && mkdir .ssh &&
+          touch ~/.ssh/known_hosts &&
+          ssh-keyscan -H "$IP" >>~/.ssh/known_hosts
+        env:
+          IP: ${{ secrets.ALIYUN_SERVER_HOST }}
+ 
       - name: Deploy to aliyun server
         uses: easingthemes/ssh-deploy@v2.1.5
         env:
