--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_STRAPI_API_URL=https://admin.genffy.com
+# NEXT_PUBLIC_STRAPI_API_URL=https://admin.genffy.com
+NEXT_PUBLIC_STRAPI_API_URL=http://localhost:1337
