--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "18.0.3",
     "@types/react-syntax-highlighter": "^15.5.2",
     "autoprefixer": "^10.4.7",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "eslint": "8.14.0",
     "eslint-config-next": "12.3.1",
